fix: MTU strikes again

--- a/files/nginx.conf
+++ b/files/nginx.conf
@@ -30,7 +30,7 @@ http {
     default_type application/octet-stream;
 
     # Rate limiting zones
-    limit_req_zone $binary_remote_addr zone=general:10m rate=10r/s;
+    limit_req_zone $binary_remote_addr zone=general:10m rate=30r/s;
     limit_req_zone $binary_remote_addr zone=api:10m rate=5r/s;
     limit_req_zone $binary_remote_addr zone=upload:10m rate=2r/s;
 
@@ -40,8 +40,13 @@ http {
     include /etc/nginx/conf.d/*.conf;
 
     server {
+        listen 443 ssl http2;
         server_name home.felixscherz.me;
         root /usr/share/nginx/html;
+
+        # SSL Configuration
+        ssl_certificate /etc/letsencrypt/live/home.felixscherz.me/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/home.felixscherz.me/privkey.pem;
 
         # Security Headers
         add_header X-Frame-Options "SAMEORIGIN" always;
@@ -49,15 +54,14 @@ http {
         add_header X-XSS-Protection "1; mode=block" always;
         add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
         add_header X-Download-Options "noopen" always;
-        add_header Referrer-Policy "strict-origin-when-cross-origin" always;
-        # add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline'; img-src 'self' data: https:; font-src 'self' data:; connect-src 'self' https: wss:;" always;
+        add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline'; img-src 'self' data: https:; font-src 'self' data:; connect-src 'self' https: wss:;" always;
 
         # Load configuration files for the default server block.
         include /etc/nginx/default.d/*.conf;
 
         location / {
             # Rate limiting
-            limit_req zone=general burst=20 nodelay;
+            limit_req zone=general burst=100 nodelay;
 
             proxy_pass http://10.0.0.10:8123; # Forward traffic to Home Assistant via VPN
             proxy_http_version 1.1;
@@ -67,6 +71,8 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header X-Forwarded-Host $host;
+            proxy_set_header X-Forwarded-Port $server_port;
             proxy_cache_bypass $http_upgrade;
 
             # WebSocket optimizations
@@ -89,9 +95,20 @@ http {
     }
 
     server {
+        listen 80;
+        server_name home.felixscherz.me;
+        return 301 https://$host$request_uri;
+    }
+
+    server {
+        listen 443 ssl http2;
         server_name paperless.felixscherz.me;
         root /usr/share/nginx/html;
         client_max_body_size 100M;
+
+        # SSL Configuration
+        ssl_certificate /etc/letsencrypt/live/home.felixscherz.me/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/home.felixscherz.me/privkey.pem;
 
         # Security Headers
         add_header X-Frame-Options "SAMEORIGIN" always;
@@ -99,7 +116,6 @@ http {
         add_header X-XSS-Protection "1; mode=block" always;
         add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
         add_header X-Download-Options "noopen" always;
-        add_header Referrer-Policy "strict-origin-when-cross-origin" always;
         add_header Content-Security-Policy "default-src 'self' 'unsafe-inline' 'unsafe-eval'; img-src 'self' data: https:; font-src 'self' data:;" always;
 
         # Load configuration files for the default server block.
@@ -107,7 +123,7 @@ http {
 
         location / {
             # Rate limiting for general requests
-            limit_req zone=general burst=20 nodelay;
+            limit_req zone=general burst=50 nodelay;
 
             proxy_pass http://10.0.0.8:8000; # Forward traffic to Paperless via VPN
             proxy_http_version 1.1;
@@ -117,6 +133,8 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header X-Forwarded-Host $host;
+            proxy_set_header X-Forwarded-Port $server_port;
             proxy_cache_bypass $http_upgrade;
 
             # WebSocket optimizations
@@ -137,6 +155,8 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header X-Forwarded-Host $host;
+            proxy_set_header X-Forwarded-Port $server_port;
         }
 
         error_page 404 /404.html;
@@ -151,9 +171,20 @@ http {
     }
 
     server {
+        listen 80;
+        server_name paperless.felixscherz.me;
+        return 301 https://$host$request_uri;
+    }
+
+    server {
+        listen 443 ssl http2;
         server_name grocy.felixscherz.me;
         root /usr/share/nginx/html;
         client_max_body_size 100M;
+
+        # SSL Configuration
+        ssl_certificate /etc/letsencrypt/live/home.felixscherz.me/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/home.felixscherz.me/privkey.pem;
 
         # Security Headers
         add_header X-Frame-Options "SAMEORIGIN" always;
@@ -161,7 +192,6 @@ http {
         add_header X-XSS-Protection "1; mode=block" always;
         add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
         add_header X-Download-Options "noopen" always;
-        add_header Referrer-Policy "strict-origin-when-cross-origin" always;
         add_header Content-Security-Policy "default-src 'self' 'unsafe-inline' 'unsafe-eval'; img-src 'self' data: https:; font-src 'self' data:;" always;
 
         # Load configuration files for the default server block.
@@ -169,7 +199,7 @@ http {
 
         location / {
             # Rate limiting
-            limit_req zone=general burst=20 nodelay;
+            limit_req zone=general burst=50 nodelay;
 
             proxy_pass http://10.0.0.8:9283;
             proxy_http_version 1.1;
@@ -179,6 +209,8 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header X-Forwarded-Host $host;
+            proxy_set_header X-Forwarded-Port $server_port;
             proxy_cache_bypass $http_upgrade;
 
             # WebSocket optimizations
@@ -202,9 +234,20 @@ http {
 
 
     server {
+        listen 80;
+        server_name grocy.felixscherz.me;
+        return 301 https://$host$request_uri;
+    }
+
+    server {
+        listen 443 ssl http2;
         server_name mealie.felixscherz.me;
         root /usr/share/nginx/html;
         client_max_body_size 100M;
+
+        # SSL Configuration
+        ssl_certificate /etc/letsencrypt/live/home.felixscherz.me/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/home.felixscherz.me/privkey.pem;
 
         # Security Headers
         add_header X-Frame-Options "SAMEORIGIN" always;
@@ -212,7 +255,6 @@ http {
         add_header X-XSS-Protection "1; mode=block" always;
         add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
         add_header X-Download-Options "noopen" always;
-        add_header Referrer-Policy "strict-origin-when-cross-origin" always;
         add_header Content-Security-Policy "default-src 'self' 'unsafe-inline' 'unsafe-eval'; img-src 'self' data: https:; font-src 'self' data:;" always;
 
         # Load configuration files for the default server block.
@@ -220,7 +262,7 @@ http {
 
         location / {
             # Rate limiting
-            limit_req zone=general burst=20 nodelay;
+            limit_req zone=general burst=50 nodelay;
 
             proxy_pass http://10.0.0.8:9925;
             proxy_http_version 1.1;
@@ -230,6 +272,8 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header X-Forwarded-Host $host;
+            proxy_set_header X-Forwarded-Port $server_port;
             proxy_cache_bypass $http_upgrade;
 
             # WebSocket optimizations
@@ -252,9 +296,20 @@ http {
     }
 
     server {
+        listen 80;
+        server_name mealie.felixscherz.me;
+        return 301 https://$host$request_uri;
+    }
+
+    server {
+        listen 443 ssl http2;
         server_name grafana.felixscherz.me;
         root /usr/share/nginx/html;
         client_max_body_size 100M;
+
+        # SSL Configuration
+        ssl_certificate /etc/letsencrypt/live/home.felixscherz.me/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/home.felixscherz.me/privkey.pem;
 
         # Security Headers
         add_header X-Frame-Options "SAMEORIGIN" always;
@@ -262,7 +317,6 @@ http {
         add_header X-XSS-Protection "1; mode=block" always;
         add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
         add_header X-Download-Options "noopen" always;
-        add_header Referrer-Policy "strict-origin-when-cross-origin" always;
         add_header Content-Security-Policy "default-src 'self' 'unsafe-inline' 'unsafe-eval'; img-src 'self' data: https: wss:; font-src 'self' data:; connect-src 'self' https: wss:;" always;
 
         # Load configuration files for the default server block.
@@ -270,7 +324,7 @@ http {
 
         location / {
             # Rate limiting
-            limit_req zone=general burst=20 nodelay;
+            limit_req zone=general burst=50 nodelay;
 
             proxy_pass http://10.0.0.8:3000;
             proxy_http_version 1.1;
@@ -285,6 +339,7 @@ http {
             # Grafana-specific headers
             proxy_set_header X-Forwarded-Host $host;
             proxy_set_header X-Forwarded-Server $host;
+            proxy_set_header X-Forwarded-Port $server_port;
 
             # WebSocket optimizations
             proxy_read_timeout 3600s;
@@ -304,6 +359,8 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header X-Forwarded-Host $host;
+            proxy_set_header X-Forwarded-Port $server_port;
 
             # WebSocket optimizations
             proxy_read_timeout 3600s;
@@ -324,9 +381,20 @@ http {
     }
 
     server {
+        listen 80;
+        server_name grafana.felixscherz.me;
+        return 301 https://$host$request_uri;
+    }
+
+    server {
+        listen 443 ssl http2;
         server_name opencode.felixscherz.me;
         root /usr/share/nginx/html;
         client_max_body_size 100M;
+
+        # SSL Configuration
+        ssl_certificate /etc/letsencrypt/live/home.felixscherz.me/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/home.felixscherz.me/privkey.pem;
 
         # SSL Client Certificate Authentication
         ssl_client_certificate /etc/nginx/ssl/ca.crt;
@@ -339,14 +407,20 @@ http {
         add_header X-XSS-Protection "1; mode=block" always;
         add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
         add_header X-Download-Options "noopen" always;
-        add_header Referrer-Policy "strict-origin-when-cross-origin" always;
 
         # Load configuration files for the default server block.
         include /etc/nginx/default.d/*.conf;
 
         location / {
             # Rate limiting
-            limit_req zone=general burst=20 nodelay;
+            limit_req zone=general burst=50 nodelay;
+
+            # Don't intercept error responses from upstream
+            proxy_intercept_errors off;
+
+            # Pass through headers
+            proxy_pass_request_headers on;
+            proxy_pass_header Authorization;
 
             proxy_pass http://10.0.0.8:4096;
             proxy_http_version 1.1;
@@ -356,9 +430,11 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header X-Forwarded-Host $host;
+            proxy_set_header X-Forwarded-Port $server_port;
             proxy_cache_bypass $http_upgrade;
 
-            # WebSocket optimizations
+            # WebSocket and streaming optimizations
             proxy_read_timeout 3600s;
             proxy_send_timeout 3600s;
             proxy_connect_timeout 60s;
@@ -374,5 +450,11 @@ http {
         location = /50x.html {
         }
 
+    }
+
+    server {
+        listen 80;
+        server_name opencode.felixscherz.me;
+        return 301 https://$host$request_uri;
     }
 }
